--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 
     "importsNotUsedAsValues": "error",
     "checkJs": true,
+    "allowJs": true,
 
     "esModuleInterop": true,
     "skipLibCheck": true,
