--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -9,16 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-lastest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 15.x, 16.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node 16
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16.x
       - run: npm i
       - run: npm run build --if-present
       - name: deploy on github page
