--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,42 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-<<<<<<< HEAD
-node_modules/
-# dist/
-=======
-node_modules
-dist
-dist-ssr
-*.local
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-# Editor directories and files
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 !.vscode/extensions.json
-.idea
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
->>>>>>> dc42942ba41ae5a26db991c5c8708f832826d425
+Thumbs.db
