[FIX] Fix algorithm due to index-position convertion miss

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "t": {
+    "tick-tac-toe": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "t:build:production"
+              "browserTarget": "tick-tac-toe:build:production"
             },
             "development": {
-              "browserTarget": "t:build:development"
+              "browserTarget": "tick-tac-toe:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "t:build"
+            "browserTarget": "tick-tac-toe:build"
           }
         },
         "test": {
