All components add changeDetectorStrategy Adding ChangeDetectorRef for render Adding pipes to replace some subscribe and complicated code Remove ViewChild, replace with hostbinding Adding generic type to EventEmitter Remove processor in gamepad for no-used

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "@services/*": ["src/app/services/*"],
       "@components/*": ["src/app/components/*"],
-      "@views/*": ["src/app/views/*"]
+      "@views/*": ["src/app/views/*"],
+      "@type/*": ["src/app/types/*"]
     }
   },
   "angularCompilerOptions": {
